GNOME Bugzilla – Bug 756958
segfaults when unloaded
Last modified: 2015-10-22 15:43:24 UTC
gnome-settings-daemon segfaults when unloaded the xsettings plugin "#0 0xffffffff in xsettings_manager_set_setting (name=0xb1375ab3 "Xft/Antialias", tier=0, value=0x823bd98, manager=<optimized out>, manager=<optimized out>) at xsettings-manager.c:209
+ Trace 235610
Created attachment 313856 [details] [review] disconnect signal from plugin_settings
Review of attachment 313856 [details] [review]: this is fine but plugin_callback() shouldn't be calling xft_callback() for the "active" key. care to provide a patch for that too?
Review of attachment 313856 [details] [review]: > xsettings: disconnect signal from plugin_settings, fix segfault on unload That's too long a commit subject. Please split this, and keep the consequence of the fix in the subject, for example: xsettings: Fix segfault when unloading plugin Disconnect the signal from plugin_settings when unloading the plugin so it's not called after the plugin has been freed.
Created attachment 313867 [details] [review] xsettings: Fix segfault when unloading plugin
Created attachment 313868 [details] [review] settings: don't call xft_callback() on "active" key changes
Review of attachment 313867 [details] [review]: Looks good, thanks. Please cherry-pick to gnome-3-18 and gnome-3-16 as well.
Review of attachment 313868 [details] [review]: > xsettings: don't call xft_callback() on "active" key changes "Don't". Looks good to me otherwise.
description changed and push to master https://git.gnome.org/browse/gnome-settings-daemon/commit/?id=1d4dffeb704425d19f98332341d20f05ad11e62c https://git.gnome.org/browse/gnome-settings-daemon/commit/?id=a21ad97ffe3fa81b037740d0df93b5cce7632a1f backported the signal fix to 3.18 and 3.16 https://git.gnome.org/browse/gnome-settings-daemon/commit/?h=gnome-3-18&id=8419dac61a46730280dedcef23560dc9067e85a5 https://git.gnome.org/browse/gnome-settings-daemon/commit/?h=gnome-3-16&id=e9c249bb4fb99766e0d1e4d087ca39a33922a4bc
Review of attachment 313867 [details] [review]: commit
Review of attachment 313868 [details] [review]: commited (with the description change requested)