xsettings: Fix segfault when unloading plugin

Disconnect the signal from plugin_settings when unloading the plugin
so it's not called after the plugin has been freed.

https://bugzilla.gnome.org/show_bug.cgi?id=756958